# search_engine

./: .gitignore  CMakeLists.txt  README.md
include/: converterjson.h  invertedindex.h  searchserver.h
resources/: answer.json  config.json  file001.txt  file002.txt  file003.txt  file004.txt  file005.txt  file006.txt  file007.txt  file008.txt  file009.txt  file010.txt  requests.json
src/: CMakeLists.txt  JSONser.pb.cc  converterjson.cpp  invertedIndexTest.cpp  invertedindex.cpp  main.cpp  searchserver.cpp
tests/: CMakeLists.txt  ConverterJSON_test.cpp  InvertedIndex_test.cpp  SearchEngine_test.cpp
